# internal/handlers/get_metadata.go
@@ -9,11 +9,11 @@ import (
 )
 
 type GetMetadataResponse struct {
-	OriginalUrl    string `json:"original_url"`
-	ShortUrl       string `json:"short_url"`
-	NumberOfAccess int32  `json:"number_of_access"`
-	CreatedAt      string `json:"created_at"`
-	UpdatedAt      string `json:"updated_at"`
+	OriginalUrl      string `json:"original_url" example:"https://www.google.com"`
+	ShortUrl         string `json:"short_url" example:"https://me.li/abc123"`
+	NumberOfAccesses int32  `json:"number_of_access" example:"0"`
+	CreatedAt        string `json:"created_at" example:"2021-09-01 12:00:00"`
+	UpdatedAt        string `json:"updated_at" example:"2021-09-01 12:00:00"`
 }
 
 // @Summary Get a URL entry
@@ -71,11 +71,11 @@ func (h *Handler) getMetadataFromShortUrl(ctx context.Context, url string) (GetM
 		}
 
 		return GetMetadataResponse{
-			OriginalUrl:    resultDB.OriginalUrl,
-			ShortUrl:       "https://me.li/" + resultDB.Hash,
-			NumberOfAccess: resultDB.NumberOfAccess,
-			CreatedAt:      resultDB.CreatedAt.Time.GoString(),
-			UpdatedAt:      resultDB.UpdatedAt.Time.GoString(),
+			OriginalUrl:      resultDB.OriginalUrl,
+			ShortUrl:         "https://me.li/" + resultDB.Hash,
+			NumberOfAccesses: resultDB.NumberOfAccesses,
+			CreatedAt:        resultDB.CreatedAt.Time.GoString(),
+			UpdatedAt:        resultDB.UpdatedAt.Time.GoString(),
 		}, nil
 	}
 
@@ -92,11 +92,11 @@ func (h *Handler) getMetadataFromOriginalUrl(ctx context.Context, url string) (G
 	}
 
 	return GetMetadataResponse{
-		OriginalUrl:    resultDB.OriginalUrl,
-		ShortUrl:       "https://me.li/" + resultDB.Hash,
-		NumberOfAccess: resultDB.NumberOfAccess,
-		CreatedAt:      resultDB.CreatedAt.Time.GoString(),
-		UpdatedAt:      resultDB.UpdatedAt.Time.GoString(),
+		OriginalUrl:      resultDB.OriginalUrl,
+		ShortUrl:         "https://me.li/" + resultDB.Hash,
+		NumberOfAccesses: resultDB.NumberOfAccesses,
+		CreatedAt:        resultDB.CreatedAt.Time.GoString(),
+		UpdatedAt:        resultDB.UpdatedAt.Time.GoString(),
 	}, nil
 }
 
@@ -120,11 +120,11 @@ func (h *Handler) persistMetaddataIntoCache(ctx context.Context, key string, res
 	defer span.End()
 
 	urlMetadataCacheData := URLMetadataCacheData{
-		OriginalUrl:    resultDB.OriginalUrl,
-		ShortUrl:       "https://me.li/" + resultDB.Hash,
-		NumberOfAccess: resultDB.NumberOfAccess,
-		CreatedAt:      resultDB.CreatedAt.Time.GoString(),
-		UpdatedAt:      resultDB.UpdatedAt.Time.GoString(),
+		OriginalUrl:      resultDB.OriginalUrl,
+		ShortUrl:         "https://me.li/" + resultDB.Hash,
+		NumberOfAccesses: resultDB.NumberOfAccesses,
+		CreatedAt:        resultDB.CreatedAt.Time.GoString(),
+		UpdatedAt:        resultDB.UpdatedAt.Time.GoString(),
 	}
 	cacheData, err := urlMetadataCacheData.marshal()
 	if err != nil {
